Add complete Twilio SMS functionality for staff and customer notifications
Features:
- Staff notifications for new appointments and tow requests
- Automatic customer SMS on RO status changes
- Manual SMS from RO details page
- SMS logging and tracking in database
- Configurable staff notification preferences

Implementation:
- Created /api/sms/send endpoint with Twilio integration
- Added SendSMSButton component to EditRepairOrderModal
- Integrated SMS notifications into appointment creation
- Integrated SMS notifications into RO status updates
- Added smsNotifications helper library
- Created database migration for staff_sms_settings and sms_logs tables

Configuration:
- Added .env.example with Twilio variables
- Created comprehensive TWILIO_SETUP_GUIDE.md
- Created SMS_FUNCTIONALITY_GUIDE.md with technical details

Ready for deployment:
- Add TWILIO_ACCOUNT_SID, TWILIO_AUTH_TOKEN, TWILIO_PHONE_NUMBER to Vercel
- Run database migration in Supabase
- Configure staff phone numbers in staff_sms_settings table

--- a/.env.local.template
+++ b/.env.local.template
@@ -10,3 +10,15 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 # Service Role Key (KEEP SECRET - for server-side operations only)
 # This bypasses Row Level Security - never expose in client code
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+
+# Twilio Configuration (for SMS notifications)
+# Get these from: https://www.twilio.com/console
+
+# Twilio Account SID (starts with AC)
+TWILIO_ACCOUNT_SID=your_twilio_account_sid_here
+
+# Twilio Auth Token (KEEP SECRET)
+TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
+
+# Twilio Phone Number (E.164 format: +15551234567)
+TWILIO_PHONE_NUMBER=your_twilio_phone_number_here
